# Graph-Based_SLAM-Aware_Exploration

./: CMakeLists.txt  README.md  exploration.xml  package.xml
config/: rosconsole.config
cpp_solver/: CMakeLists.txt  package.xml
cpp_solver/launch/: exploration.launch
cpp_solver/msg/: PoseGraph.msg
cpp_solver/param/: exploration.rviz  mapper.yaml  ros.yaml
cpp_solver/scripts/: exploration_button_server.py  offline_tsp_evaluation.py  path_planner.py  tsp.py
cpp_solver/src/: MyPlanner.cpp  MyPlanner.h
cpp_solver/srv/: ExplorationButton.srv  ReliableLoop.srv  RequestGraph.srv
cpp_solver/world/map3/: .$map3.drawio.bkp  map3.world
cpp_solver/world/map4/: map4.drawio  map4.xml
cpp_solver/world/map7/: .$map7.drawio.bkp  map7.drawio  map7.world  map7.xml  map7.yaml
cpp_solver/world/map8/: .$map5.drawio.bkp  .$map5.drawio.dtmp  .$map8.drawio.bkp  map8.drawio  map8.xml  map8.yaml
launch/: joy_control_Pioneer.launch  play_bag.launch  real_exploration_with_pioneer.launch  simulation_exploration_with_joy.launch
msg/: EdgeDistance.msg
param/: mapper.yaml  my_rviz.rviz  navigator.yaml
scripts/: exploration_button_client.py  path_planner.py  read_drawio_to_nx.py  utils.py
src/: exploration_plugins.cpp  pubPathGT.cpp  updateDistance.cpp
src/AStar/: AStar2.cpp  AStar2.h
src/graph/: graph.cpp  graph.h
srv/: TspPathList.srv
world/map3/: .$grid_world.drawio.bkp  map3.drawio  map3.xml  map3.yaml  p3at.inc
world/map4/: .$map4.drawio.bkp  map4.world  map4.yaml
world/map7/: .$map6.drawio.bkp  hokuyo.inc
world/map8/: map8.world  p3at.inc
