<?xml version="1.0"?>
<package>
  <name>cpp_solver</name>
  <version>0.0.1</version>
  <description>
    This package contains a plugin for the RobotNavigator, that provide
    different Chinese-Postman based exploration.
  </description>

  <maintainer email="alberto.soragna@gmail.com">Alberto Soragna</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav2d_navigator</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- <build_depend>tsp_planner</build_depend>
  <run_depend>tsp_planner</run_depend> -->

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nav2d_navigator</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <nav2d_navigator plugin="${prefix}/exploration.xml" />
  </export>

</package>
